Make sure that selector item entries do not wrap

--- a/src/tibet/tools/sherpa/TP.sherpa.styleshud/TP.sherpa.styleshud.css
+++ b/src/tibet/tools/sherpa/TP.sherpa.styleshud/TP.sherpa.styleshud.css
@@ -47,6 +47,8 @@ sherpa|styleshud > ul.content > li {
     text-overflow: ellipsis;
 
     cursor: pointer;
+
+    white-space: nowrap;
 }
 
 sherpa|styleshud > ul.content > li:hover {
